# ims-server/src/Swagger.json
@@ -240,6 +240,28 @@
                 }
             }
         },
+        "/timelineEvent/timelineEventByIncidentId/{id}/": {
+            "get": {
+                "tags": [
+                    "timelineEvent"
+                ],
+                "description": "Retrieve all timeline events for specific id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "404": {
+                        "description": "Timeline Events not found for given id"
+                    }
+                }
+            }
+        },
         "/timelineEvent/": {
             "post": {
                 "tags": [
