# ims-server/src/routes/timelineEventRouter.ts
@@ -10,6 +10,7 @@ router.post("/", timelineEventController.addTimelineEvent);
 router.post("/compareIncidentChanges", timelineEventController.compareIncidentChanges);
 router.delete("/:id", timelineEventController.deleteTimelineEvent);
 router.get('/:id/', timelineEventController.getTimelineEventById);
+router.get('/timelineEventByIncidentId/:id/', timelineEventController.getTimelineEventByIncidentId);
 router.get('/:id/files/', timelineEventController.getFileInTimelineEventByIndex)
 router.delete('/:id/files', timelineEventController.deleteFileInTimelineEventByIndex)
 router.put('/updateTimeLineEvent/:id', timelineEventController.updateTimelineEvent);
